fix spacing on date-range

--- a/frontend/source/sass/components/_forms.scss
+++ b/frontend/source/sass/components/_forms.scss
@@ -97,6 +97,7 @@ form > .fieldset-error {
 .date-range {
   margin-bottom: 2.5rem;
   fieldset {
+    margin-top: 3rem;
     display: inline-block;
     .form-group:last-child {
       margin-right: 0;
